<resources>
    <string name="app_name">DoSplash</string>
    <string name="free_photos_from_unsplash">Free photos from unsplash</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="app_logo">App Logo</string>
    <string name="header_image">Header Image</string>
    <string name="dosplash">DOSPLASH</string>
    <string name="top_photos_from_unsplash">Top photos from unsplash</string>
    <string name="it_seems_you_are_not_connected_to_internet">It seems you are not connected to Internet!</string>
    <string name="connection_lost">Please check your connection!</string>
    <string name="no_data_found">No data found!</string>
    <string name="swipe_to_refresh">Swipe Down to refresh!</string>
</resources>