<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="random"
            type="dev.ananurag2.dosplash.model.ImageResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".ui.list.ListActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/ic_dosplash_logo" />
        </androidx.appcompat.widget.Toolbar>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_container"
            android:layout_width="0dp"
            android:layout_height="@dimen/header_image_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:shimmer_auto_start="true"
            app:shimmer_base_color="@color/colorGrey"
            app:shimmer_direction="left_to_right"
            app:shimmer_duration="1000">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorDarkGrey" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="0dp"
            android:layout_height="@dimen/header_image_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/header_image"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:mainUrl="@{random.urls.regular}"
            app:thumbUrl="@{random.urls.thumb}"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dosplash"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_36"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_sub_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_header"
            app:layout_constraintVertical_chainStyle="packed" />

        <!--        Tried to match it with Title using AutoSizeTextView, but didn't work-->
        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/top_photos_from_unsplash"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/iv_header"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_image_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:paddingHorizontal="@dimen/dimen_16_dp"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_item" />

                <ProgressBar
                    android:id="@+id/more_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_4_dp"
                    android:progressTint="@color/primaryTextColor" />

                <TextView
                    android:id="@+id/tv_empty"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dimen_8_dp"
                    android:gravity="center"
                    android:padding="@dimen/dimen_4_dp"
                    android:text="@string/swipe_to_refresh"
                    android:textSize="@dimen/text_size_18"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_error" />
            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>